# Orion-Sentinel-DataAICore

./: .gitignore  CONFIGURATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  OPERATIONS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  compose.yaml
.github/workflows/: compose-validation.yml
AthleanX/AthleanX.xcodeproj/: project.pbxproj
env/: .env.example  profiles.example
ha-energy-automation/: .gitignore  README.md  secrets.yaml.template
persona/: .coverage  BUILD_LOG.md  CLAUDE.md  INSTALL.sh  LICENSE  README.md  pyproject.toml
persona/USER/: .ring  communication.md  constraints.md  current-focus.md  goals.md  history.md  identity.md  preferences.md  private.md  relationships.md  skills.md
persona/config/: allowlist.yaml  persona.yaml
persona/docs/integrations/: claude-desktop.md
persona/persona/: __init__.py
persona/persona/schema/: __init__.py  persona.schema.json
persona/persona/server/: __init__.py  access_control.py  audit.py  main.py  resources.py
persona/persona/validator/: __init__.py  validate.py
persona/prompts/: onboarding.md
persona/tests/: __init__.py  test_access_control.py  test_audit_and_main.py  test_onboarding.py  test_server.py  test_validator.py
persona/tests/fixtures/sample_profile/: communication.md  constraints.md  current-focus.md  goals.md  history.md  identity.md  preferences.md  private.md  relationships.md  skills.md
scripts/: backup.sh  bootstrap-dataaicore.sh  doctor.sh  gen-secrets.sh  orionctl  pull-model.sh  restore.sh
systemd/: dataaicore.service
(+73 files in other folders)
